# ProjectRio

./: .git-credentials  .gitignore  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: projectrio-actions.yml
api_root/: apps.py  urls.py  views.py
apps/: __init__.py
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/api_root/: apps.py
apps/bookings/: models.py  serializers.py  urls.py  views.py
apps/events_and_classes/: apps.py  urls.py
apps/home/: urls.py  views.py
apps/users/: models.py  serializers.py  urls.py  views.py
bookings/: Untitled-1.ipynb  models.py  serializers.py  tests.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_auto_20220818_1505.py  0003_alter_booking_owner.py
events_and_classes/: models.py  serializers.py  urls.py  views.py
home/: urls.py  views.py
home/templates/: base_generic.html  index.html
members/: models.py  serializers.py  urls.py  views.py
rioacademy/: NOTES  asgi.py  containers.py  settings.py  urls.py  wsgi.py
rioacademy/projectrio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rioacademy/settings/: development.py  testing.py
scripts/: manage.py
src/: manage.py
src/accounts/: models.py  serializers.py  tests.py  urls.py  views.py
src/bookings/: admin.py  models.py  serializers.py  services.py  views.py
src/events_and_classes/: apps.py  models.py  tests.py  urls.py
src/home/: urls.py
src/members/: models.py
tests/: conftest.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
(+79 files in other folders)
