[metadata]
name = projectrio
version = 0.1.0
author = Olof Thornell
author_email = olof.thornell@gmail.com
description = website for Rio Academy
long description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages  = find:
include_package_data = True

[options.packages.find]
where = apps

[coverage:run]
branch = True
omit = 
    */node_modules/*  
    manage.py
    *migrations*
source = apps

[coverage:report]
fail_under = 100

[coverage:html]
directory = htmlcov
